--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Data.SQL/TOne.WhS.BusinessEntity.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Data.SQL/TOne.WhS.BusinessEntity.Data.SQL.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountManagerCarrierDataManager.cs" />
+    <Compile Include="CarrierAccountStatusHistoryDataManager.cs" />
     <Compile Include="CodeGroupDataManager.cs" />
     <Compile Include="CarrierAccountDataManager.cs" />
     <Compile Include="CarrierProfileDataManager.cs" />
