Added the files necessary to implement the cancel pending rates bulk action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43395

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
@@ -65,6 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BulkActions\ActionTypes\BEDBulkActionType.cs" />
+    <Compile Include="BulkActions\ActionTypes\CancelPendingRatesBulkAction.cs" />
     <Compile Include="BulkActions\ActionTypes\DefaultRoutingProductBulkActionType.cs" />
     <Compile Include="BulkActions\ActionTypes\EEDBulkActionType.cs" />
     <Compile Include="BulkActions\ActionTypes\ImportBulkAction.cs" />
