--- a/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
+++ b/Retail/Code/Retail.MultiNet.Business/Retail.MultiNet.Business.csproj
@@ -121,14 +121,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Convertors\AccountConvertor.cs" />
-    <Compile Include="Convertors\BranchConvertor.cs" />
-    <Compile Include="Convertors\CompanyConvertor.cs" />
+    <Compile Include="Convertors\MigrationConvertors\BranchConvertor.cs" />
+    <Compile Include="Convertors\MigrationConvertors\CompanyConvertor.cs" />
     <Compile Include="Convertors\CustomerConvertor.cs" />
-    <Compile Include="Convertors\DIDConvertor.cs" />
+    <Compile Include="Convertors\MigrationConvertors\DIDConvertor.cs" />
     <Compile Include="Convertors\MultiNetUserConvertor.cs" />
     <Compile Include="Convertors\PaymentConvertor.cs" />
-    <Compile Include="Convertors\SubscriberConvertor.cs" />
-    <Compile Include="Convertors\UserConvertor.cs" />
+    <Compile Include="Convertors\MigrationConvertors\SubscriberConvertor.cs" />
+    <Compile Include="Convertors\MigrationConvertors\UserConvertor.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfo.cs" />
     <Compile Include="ExtendedInfo\MultiNetBranchExtendedInfoDefinition.cs" />
     <Compile Include="ExtendedInfo\MultiNetCompanyExtendedInfo.cs" />
