--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Data.SQL/TOne.WhS.DBSync.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Data.SQL/TOne.WhS.DBSync.Data.SQL.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Common\IDBSyncDataManager.cs" />
     <Compile Include="Common\Constants.cs" />
     <Compile Include="Common\MigrationUtils.cs" />
+    <Compile Include="DBSyncDataManager\CarrierAccountStatusHistoryDBSyncDataManager.cs" />
     <Compile Include="DBSyncDataManager\ClearTempTablesDBSyncDataManager.cs" />
     <Compile Include="DBSyncDataManager\VRTimeZoneDBSyncDataManager.cs" />
     <Compile Include="DBSyncDataManager\SaleZoneServicesDBSyncDataManager.cs" />
