--- a/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.DBSync.Entities/TOne.WhS.DBSync.Entities.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Rules\SourceSpecialRequest.cs" />
     <Compile Include="Rules\SourceTariffRule.cs" />
     <Compile Include="Rules\SupplierOption.cs" />
+    <Compile Include="SourceCarrierAccountStatusHistory.cs" />
     <Compile Include="SourceCarrierDocument.cs" />
     <Compile Include="SourceCarrierSwitchConnectivity.cs" />
     <Compile Include="SourceMarketPrice.cs" />
