--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -72,6 +73,7 @@
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceEmailActionManager.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\Configs\SendEmailAttachmentTypeConfig.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceFileConvertor\ConditionalInvoiceFile.cs" />
+    <Compile Include="InvoiceActionSettings\EmailTemplateRuntimeEditor.cs" />
     <Compile Include="InvoiceActionSettings\InvoiceNoteAction.cs" />
     <Compile Include="InvoiceActionSettings\OpenRDLCReportActionManager.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceFileConvertor\InvoiceRDLCFileConverter.cs" />
