--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -217,6 +217,7 @@
     <Content Include="WhS_BusinessEntity\Constant\ProfilePropertyEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SaleEntityZoneRoutingProductSourceTypeEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePricelistCompressFileEnum.js" />
+    <Content Include="WhS_BusinessEntity\Constant\SalePricelistFileNamePartsEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\SalePriceListPropertyEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\CustomerPropertyEnum.js" />
     <Content Include="WhS_BusinessEntity\Constant\PrimarySaleEntityEnum.js" />
