adding new class SalePricelistVRFile
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43463

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -155,6 +155,7 @@
     <Compile Include="SalePriceListTemplate\SalePricelistTemplateTableRow.cs" />
     <Compile Include="SalePriceList\SalePriceListInput.cs" />
     <Compile Include="SalePriceList\SalePriceListOption.cs" />
+    <Compile Include="SalePriceList\SalePricelistVRFile.cs" />
     <Compile Include="SaleRate\History\CustomerZoneRates.cs" />
     <Compile Include="SaleRate\History\SaleRateHistoryQuery.cs" />
     <Compile Include="SaleRate\History\SaleRateHistoryRecord.cs" />
