Refactor Mediation Process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43464

--- a/Mediation/Code/Mediation.Generic.Business/Mediation.Generic.Business.csproj
+++ b/Mediation/Code/Mediation.Generic.Business/Mediation.Generic.Business.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Compile Include="FileCustomParser.cs" />
     <Compile Include="MediationBPDefinitionSettings.cs" />
+    <Compile Include="MediationCommittedIdManager.cs" />
     <Compile Include="MediationDefinitionManager.cs" />
     <Compile Include="MediationProcessContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
