--- a/Mediation/Code/Mediation.Generic.Data/Mediation.Generic.Data.csproj
+++ b/Mediation/Code/Mediation.Generic.Data/Mediation.Generic.Data.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IMediationCommittedIdDataManager.cs" />
     <Compile Include="IMediationDefinitionDataManager.cs" />
     <Compile Include="IMediationRecordsDataManager.cs" />
     <Compile Include="IMultiLegSessionIdDataManager.cs" />
