adding salepricelistfilepreview grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43465

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/TOne.WhS.BusinessEntity.Web.csproj
@@ -356,6 +356,8 @@
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListTemplate\MappedCell\vr-whs-be-pricelisttemplate-mappedcells-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListTemplate\MappedCell\vr-whs-be-pricelisttemplate-mappedcells.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceListTemplate\MappedCell\vr-whs-be-salepricelisttemplate-mappedcells-selective.js" />
+    <Content Include="WhS_BusinessEntity\Directives\SalePriceList\Templates\SalePricelistFilePreviewTemplate.html" />
+    <Content Include="WhS_BusinessEntity\Directives\SalePriceList\vr-whs-be-salepricelistfilepreview-grid.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceList\vr-whs-be-salepricelisttype-selector.js" />
     <Content Include="WhS_BusinessEntity\Directives\SalePriceList\vr-whs-salepricelist-compressfile-selector.js" />
     <Content Include="WhS_BusinessEntity\Directives\SaleRate\Templates\SaleRateHistoryGridTemplate.html" />
