--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Entities/TOne.WhS.BusinessEntity.Entities.csproj
@@ -148,6 +148,9 @@
     <Compile Include="SalePricelistChanges\CustomerRatePreview.cs" />
     <Compile Include="SalePricelistChanges\CustomerRatePreviewDetail.cs" />
     <Compile Include="SalePricelistChanges\CustomerRatePreviewQuery.cs" />
+    <Compile Include="SalePricelistChanges\RountingProductPreview.cs" />
+    <Compile Include="SalePricelistChanges\RountingProductPreviewDetail.cs" />
+    <Compile Include="SalePricelistChanges\RoutingProductPreviewQuery.cs" />
     <Compile Include="SalePricelistChanges\SalePriceListEvaluatedEmail.cs" />
     <Compile Include="SalePricelistChanges\SalePricelistRateChangeDetail.cs" />
     <Compile Include="SalePricelistChanges\SalePricelistRPChange.cs" />
