--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Data/TOne.WhS.Sales.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Data/TOne.WhS.Sales.Data.csproj
@@ -71,6 +71,7 @@
     <Compile Include="INewSaleZoneRoutingProductDataManager.cs" />
     <Compile Include="IChangedSaleZoneRoutingProduct.cs" />
     <Compile Include="INewSaleZoneServiceDataManager.cs" />
+    <Compile Include="IPricingTemplateDataManager.cs" />
     <Compile Include="IRateDataManager.cs" />
     <Compile Include="IRatePlanDataManager.cs" />
     <Compile Include="IRatePlanPreviewSummaryDataManager.cs" />
