--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -76,6 +76,11 @@
     <Compile Include="CodeComparison\CodeCompareQuery.cs" />
     <Compile Include="CountryWithDefaultRateQuery.cs" />
     <Compile Include="DraftTaskData.cs" />
+    <Compile Include="PricingTemplate\CountryPricingTemplate.cs" />
+    <Compile Include="PricingTemplate\PricingTemplate.cs" />
+    <Compile Include="PricingTemplate\PricingTemplateRule.cs" />
+    <Compile Include="PricingTemplate\RatePricingTemplate.cs" />
+    <Compile Include="PricingTemplate\ZonePricingTemplate.cs" />
     <Compile Include="RateManagement\Zone\ZoneDataByCountryIds.cs" />
     <Compile Include="SellingZonesWithDefaultRatesTaskData.cs" />
     <Compile Include="SupplierTargetMatch\ITargetMatchCalculationMethodContext.cs" />
