--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Preview\NewCustomerCountryPreviewManager.cs" />
     <Compile Include="PriceListManager\Context\ProcessCustomerCountriesContext.cs" />
     <Compile Include="PriceListManager\PriceListCustomerCountryManager.cs" />
+    <Compile Include="PricingTemplateManager.cs" />
     <Compile Include="RatePlanProcessBPSettings.cs" />
     <Compile Include="Reader\RatePlanServiceReadWithCache.cs" />
     <Compile Include="Preview\DefaultServicePreviewManager.cs" />
