--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Data.SQL/TOne.WhS.Sales.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Data.SQL/TOne.WhS.Sales.Data.SQL.csproj
@@ -73,6 +73,7 @@
     <Compile Include="NewSaleRateDataManager.cs" />
     <Compile Include="NewSaleZoneRoutingProductDataManager.cs" />
     <Compile Include="NewSaleZoneServiceDataManager.cs" />
+    <Compile Include="PricingTemplateDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateDataManager.cs" />
     <Compile Include="RatePlanDataManager.cs" />
