--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.MainExtensions/TOne.WhS.Sales.MainExtensions.csproj
@@ -55,6 +55,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Common.Business, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.Business.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
@@ -81,8 +85,13 @@
     <Compile Include="CostCalculation\PercentageCostCalculation.cs" />
     <Compile Include="CostCalculation\RoutePercentageCostCalculation.cs" />
     <Compile Include="CostCalculation\WeightedAvgCostCalculation.cs" />
+    <Compile Include="PricingTemplateRate\CostMarginRateCalculation.cs" />
+    <Compile Include="PricingTemplateRate\MarginRateCalculationContext.cs" />
+    <Compile Include="PricingTemplateRate\RouteOptionMarginRateCalculation.cs" />
+    <Compile Include="PricingTemplateRate\SupplierMarginRateCalculation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RateCalculation\FixedRateCalculationMethod.cs" />
+    <Compile Include="RateCalculation\PricingTemplateCalculationMethod.cs" />
     <Compile Include="RateCalculation\MarginRateCalculationMethod.cs" />
     <Compile Include="SupplierTargetMatchCalculation\WeightedAverageTargetMatchCalculation.cs" />
     <Compile Include="SupplierTargetMatchCalculation\AverageTargetMatchCalculation.cs" />
