--- a/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.MainExtensions/Vanrise.Invoice.MainExtensions.csproj
@@ -78,6 +78,7 @@
     <Compile Include="InvoiceActionSettings\OpenRDLCReportActionManager.cs" />
     <Compile Include="InvoiceActionSettings\EmailAction\InvoiceFileConvertor\InvoiceRDLCFileConverter.cs" />
     <Compile Include="Convertors\InvoiceToVRObjectConvertor.cs" />
+    <Compile Include="InvoiceActionSettings\DownloadFileInvoiceAction.cs" />
     <Compile Include="InvoiceDataSourceSettings\ItemGroupingDataSourceSettings.cs" />
     <Compile Include="InvoiceDataSourceSettings\LastInvoicesDataSourceSettings.cs" />
     <Compile Include="InvoiceDataSourceSettings\TaxesDataSourceSettings.cs" />
