Implementing save file n voice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43550

--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -268,9 +268,11 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\SendEmail\MainExtensions\Templates\ConditionalAttachmentEditor.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\SendEmail\MainExtensions\vr-invoiceactions-sendemail-attachmenttype-conditionalinvoicefile.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\InvoiceNoteActionTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\DownloadFileActionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\RecreateActionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\Templates\SetInvoiceLockActionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\vr-invoicetype-gridactionsettings-note.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\vr-invoicetype-gridactionsettings-downloadfile.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\vr-invoicetype-gridactionsettings-recreate.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\MainExtensions\vr-invoicetype-gridactionsettings-setinvoicelock.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceActions\Templates\InvoiceActionsGridTemplate.html" />
@@ -288,17 +290,21 @@
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-taxes.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceDataSourceSettings\MainExtensions\DataSource\vr-invoicetype-datasourcesettings-itemgrouping.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceExtendedSettings\vr-invoicetype-extendedsettings.js" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\Templates\TimeFileNamePartTemplate.html" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\Templates\InvoiceFieldFileNamePartTemplate.html" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\vr-invoicetype-filename-time.js" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\MainExtensions\vr-invoicetype-filename-invoicefield.js" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\FileNamePartEditorController.js" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\FileNamePatternHelperController.js" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\Templates\FileNamePartEditor.html" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\Templates\FileNamePartsTemplate.html" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\Templates\FileNamePatternHelper.html" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\vr-invoicetype-filenameparts.js" />
-    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNamePart\vr-invoicetype-filename-pattern.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\FileAttachmentEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\MainExtensions\Templates\TimeFileNamePartTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\MainExtensions\Templates\InvoiceFieldFileNamePartTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\MainExtensions\vr-invoicetype-filename-time.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\MainExtensions\vr-invoicetype-filename-invoicefield.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\FileNamePartEditorController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\FileNamePatternHelperController.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\Templates\FileAttachmentEditor.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\Templates\FileNamePartEditor.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\Templates\FilesAttachmentsTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\Templates\FileNamePartsTemplate.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\Templates\FileNamePatternHelper.html" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\vr-invoicetype-filesattachments.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\vr-invoicetype-filenameparts.js" />
+    <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceFileNameSettings\vr-invoicetype-filename-pattern.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\FilterConditionItemEditorController.js" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\AccountActivationConditionTemplate.html" />
     <Content Include="VR_Invoice\Directives\InvoiceType\InvoiceGridSettings\MainExtensions\InvoiceFilterCondition\Templates\ConditionGroupTemplate.html" />
