--- a/Retail/Code/Retail.Teles.Business/Retail.Teles.Business.csproj
+++ b/Retail/Code/Retail.Teles.Business/Retail.Teles.Business.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AccountBEActionTypes\MappingTelesSiteActionSettings.cs" />
     <Compile Include="AccountBEActionTypes\MappingTelesAccountActionSettings.cs" />
     <Compile Include="AccountBEActionTypes\MappingTelesUserActionSettings.cs" />
+    <Compile Include="AccountTelesDIDsAndBusinessTrunksView.cs" />
     <Compile Include="TelesTemplateEntityDefinitionFilter.cs" />
     <Compile Include="EnterpriseBEDefinitionFilter.cs" />
     <Compile Include="EnterpriseNotMappedToAccountFilter.cs" />
