Implementing teles dids and business trunks view
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43571

--- a/Retail/Code/Retail.Teles.Entities/Retail.Teles.Entities.csproj
+++ b/Retail/Code/Retail.Teles.Entities/Retail.Teles.Entities.csproj
@@ -47,6 +47,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnterpriseBusinessTrunk.cs" />
+    <Compile Include="EnterpriseBusinessTrunkDetail.cs" />
+    <Compile Include="EnterpriseBusinessTrunksQuery.cs" />
+    <Compile Include="EnterpriseDID.cs" />
+    <Compile Include="EnterpriseDIDDetail.cs" />
+    <Compile Include="EnterpriseDIDsQuery.cs" />
     <Compile Include="TelesTemplateEntity\TelesTemplateEntityDefinitionSettings.cs" />
     <Compile Include="TelesTemplateEntity\TelesTemplateEntitySettings.cs" />
     <Compile Include="EnterpriseAccountMappingInfo.cs" />
