--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -251,9 +251,11 @@
     <Content Include="WhS_Sales\Directives\OtherRate\vr-whs-sales-otherrate-grid.js" />
     <Content Include="WhS_Sales\Directives\Preview\vr-whs-sales-salezoneservicepreview-grid.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateGridTemplate.html" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateRuleManagementTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\Templates\PricingTemplateZoneFilterTemplate.html" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-grid.js" />
     <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplate-zonefilter.js" />
+    <Content Include="WhS_Sales\Directives\PricingTemplate\vr-whs-sales-pricingtemplaterule-management.js" />
     <Content Include="WhS_Sales\Directives\SellingRules\Templates\SellingRulesGridTemplate.html" />
     <Content Include="WhS_Sales\Directives\SellingRules\vr-whs-sales-sellingrules-grid.js" />
     <Content Include="WhS_Sales\Directives\Service\Templates\DefaultServiceTemplate.html" />
@@ -323,6 +325,8 @@
     <Content Include="WhS_Sales\Views\PricingTemplate\PricingTemplateEditorController.js" />
     <Content Include="WhS_Sales\Views\PricingTemplate\PricingTemplateManagement.html" />
     <Content Include="WhS_Sales\Views\PricingTemplate\PricingTemplateManagementController.js" />
+    <Content Include="WhS_Sales\Views\PricingTemplate\PricingTemplateRuleEditorController.js" />
+    <Content Include="WhS_Sales\Views\PricingTemplate\PricingTemplateRuleEditor.html" />
     <Content Include="WhS_Sales\Views\RatePlanPreview.html" />
     <Content Include="WhS_Sales\Views\RatePlanPreviewController.js" />
     <Content Include="WhS_Sales\Views\RatePlanPricingSettings.html" />
