--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -84,6 +84,7 @@
     <Compile Include="PricingTemplate\RatePricingTemplate.cs" />
     <Compile Include="PricingTemplate\ZonePricingTemplate.cs" />
     <Compile Include="RateManagement\Zone\ZoneDataByCountryIds.cs" />
+    <Compile Include="RatePlanning\CarrierAccount\AffectedCarrierAccountFilter.cs" />
     <Compile Include="SellingZonesWithDefaultRatesTaskData.cs" />
     <Compile Include="SupplierTargetMatch\ITargetMatchCalculationMethodContext.cs" />
     <Compile Include="SupplierTargetMatch\SupplierTargetMatch.cs" />
