Implementing rename zones from sale zone grid, remove rename from numbering plan, fix bugs when renaming zone by importing sheet
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C43584

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Entities/TOne.WhS.CodePreparation.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Entities/TOne.WhS.CodePreparation.Entities.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ChangedData\ChangedRate.cs" />
     <Compile Include="ChangedData\ChangedZone.cs" />
     <Compile Include="AddedCode.cs" />
+    <Compile Include="ClosedExistingZones.cs" />
     <Compile Include="ExistingRate.cs" />
     <Compile Include="ExistingRateGroup.cs" />
     <Compile Include="ExistingRatesByZoneName.cs" />
